fix spacing home desktop

--- a/src/CTAButton.scss
+++ b/src/CTAButton.scss
@@ -11,7 +11,8 @@
     font-size: 3vh;
     text-decoration: none;
     text-transform: uppercase;
-    color: #004f74;
+    color: black;
+    // color: #004f74;
   }
 }
 
